<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context="pl.animagia.MainActivity">

   <FrameLayout
       android:id="@+id/frame_for_content"
       android:layout_width="match_parent"
       android:layout_height="match_parent" >
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:gravity="center_horizontal|center_vertical"
               android:id="@+id/catalog_fetching_progress"
               android:visibility="invisible" >
               <ProgressBar
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
               <TextView
                   android:layout_marginTop="8dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/error_fetching_catalog"
                   android:textAlignment="center"
                   android:visibility="invisible"
                   android:id="@+id/catalog_fetching_error"/>
           </LinearLayout>
   </FrameLayout>

</android.support.constraint.ConstraintLayout>
