...
    <string name="error_fetching_catalog">Sprawdź połączenie z Internetem</string>
    <string name="try_again">Spróbuj ponownie</string>
    <string name="turn_on_internet">Włącz internet</string>
    <string name="not_logged">Nie zalogowano na konto</string>
    <string name="login_error">Błąd logowania</string>
    <string name="logged_out">Wylogowano</string>
    <string name="wrong_credentials">Nieprawidłowe dane logowania</string>
    <string name="no_account_needed">Nasza aplikacja nie wymaga zakładania konta.\n
        Dokonane zakupy będą widoczne tutaj,\notrzymasz też kody aktywacyjne na mail
    powiązany\nz płatnością, dzięki czemu nic nie przepadnie.</string>
    <string name="no_account_needed_short">Żeby oglądać anime dostępne bezpłatnie,
        nie musisz zakładać konta.</string>
    <string name="have_locally_purchased_anime">Masz anime zakupione w aplikacji:%1$s</string>
...
